setup basic express serve

--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,9 @@
   "prettier":{"tabWidth": 4},
   "engines": {
     "node": ">=14.13.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
