--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
